# langlish

./: DOCKER_SETUP.md  LICENSE  README.md  docker-compose.yml
airflow/: .gitignore  airflow.cfg  airflow.cfg.bak  airflow.db  pyproject.toml  simple_auth_manager_passwords.json.generated
airflow/dags/: evaluate_response.py  evaluation_dag.py  import_test.py  test.py
airflow/src/: evaluate_response.py  merge_session.py  mlflow_config.py
airflow/src/services/: s3_service.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/airflow/: simple_auth_manager_passwords.json.generated
backend/airflow/dags/: evaluate_response.py  evaluation_dag.py
backend/api/: upload_audio.py
backend/mlruns/0/: meta.yaml
backend/mlruns/127748797430439259/: meta.yaml
backend/mlruns/127748797430439259/011c00b242394984ba7f7dfb1e4b5b79/: meta.yaml
backend/mlruns/127748797430439259/011c00b242394984ba7f7dfb1e4b5b79/artifacts/: prompt.txt  session_config.json
backend/mlruns/127748797430439259/011c00b242394984ba7f7dfb1e4b5b79/params/: session_id
backend/mlruns/127748797430439259/011c00b242394984ba7f7dfb1e4b5b79/tags/: mlflow.runName
backend/mlruns/127748797430439259/073f1895dcf141428c17c50eba10b8aa/: meta.yaml
backend/mlruns/127748797430439259/073f1895dcf141428c17c50eba10b8aa/artifacts/: session_config.json
backend/mlruns/127748797430439259/073f1895dcf141428c17c50eba10b8aa/params/: session_id
backend/mlruns/127748797430439259/073f1895dcf141428c17c50eba10b8aa/tags/: mlflow.runName
backend/mlruns/127748797430439259/0ec6854556144952976e39ab08bea8f9/: meta.yaml
backend/mlruns/127748797430439259/0ec6854556144952976e39ab08bea8f9/params/: session_id
backend/mlruns/127748797430439259/0ec6854556144952976e39ab08bea8f9/tags/: mlflow.runName
backend/mlruns/127748797430439259/1072f18a3bc3453c8178f7034b118608/: meta.yaml
backend/mlruns/127748797430439259/1072f18a3bc3453c8178f7034b118608/params/: session_id
backend/mlruns/127748797430439259/1074ded1194848c6a14c095a2d5aac40/: meta.yaml
backend/mlruns/127748797430439259/17334ca7610541bc9ca30ea0e0c292d8/: meta.yaml
backend/mlruns/127748797430439259/1942854323024793aa55822b645b05aa/: meta.yaml
backend/mlruns/127748797430439259/270ae0cbea6f4856a7e952dfc05d1d08/: meta.yaml
backend/mlruns/127748797430439259/3b75a81211534e20b1512438a42c3e6b/: meta.yaml
backend/mlruns/127748797430439259/3bd84fcce02d4cd8b12369d6f2706712/: meta.yaml
backend/mlruns/127748797430439259/3e0ad036947642beb621a4741b1543c0/: meta.yaml
backend/mlruns/127748797430439259/406d84d821f44c199a441eee9f99ccba/: meta.yaml
backend/mlruns/127748797430439259/4231498a0de04de69f3688cc84b5805c/: meta.yaml
backend/mlruns/127748797430439259/46c069a761c446099115fbe9403121e1/: meta.yaml
backend/mlruns/127748797430439259/4995acff81324380965950fbc227f794/: meta.yaml
backend/mlruns/127748797430439259/4f8654e513d74a2aa60331b6343ae5fc/: meta.yaml
backend/mlruns/127748797430439259/53948c8e7bff4280bb37fde9681254f7/: meta.yaml
backend/mlruns/127748797430439259/56be00d75f534a218ae8a6af29434c16/: meta.yaml
backend/mlruns/127748797430439259/59626b239a8a48fbae7e167397804dfa/: meta.yaml
backend/mlruns/127748797430439259/5e9574ef11894f31b696a5965cdac4ba/: meta.yaml
backend/mlruns/127748797430439259/79f0ab3a2a2e4f0fa51d970032fd985b/: meta.yaml
backend/mlruns/127748797430439259/84b26b197e724e5ebd6adb429d0407a4/: meta.yaml
backend/mlruns/127748797430439259/8d65daa87b5442d1ae5a682aad4aef92/: meta.yaml
backend/mlruns/127748797430439259/90863fcb190844c89031b39c91c4dd3f/: meta.yaml
backend/mlruns/127748797430439259/b4e24b02858c4ac1bcd682adfd13f9f0/: meta.yaml
backend/mlruns/127748797430439259/b520e42c73414f8286f6d98ba2ca3e9b/: meta.yaml
backend/mlruns/127748797430439259/cdaffb93490b432496024b8c8e1e65d2/: meta.yaml
backend/mlruns/127748797430439259/ce54ea41980a4a02a77cc6ede7f9aa30/: meta.yaml
backend/mlruns/127748797430439259/d62b7e2c9a654951b853bd0a3d5127d9/: meta.yaml
backend/mlruns/127748797430439259/dbf97f9c96d44f00a872a6d1a01a7790/: meta.yaml
backend/src/: config.py  debug.py  mlflow_config.py
backend/src/models/: greeting.py
backend/src/routes/: agent_streamline.py  streamline.py
backend/src/services/: prompt_tracker.py  s3_service.py
backend/src/utils/: audio.py
backend/test/: test_main.py
backend/tests/: conftest.py  test_main.py
frontend/: .dockerignore  (+6 more)
(+76 files in other folders)
