[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "apache-airflow==3.0.2",
    "apache-airflow-core==3.0.2",
    "apache-airflow-providers-smtp==2.1.0",
    "apache-airflow-providers-standard==1.3.0",
    "apache-airflow-providers-common-sql==1.27.2",
    "apache-airflow-providers-common-compat==1.7.1",
    "apache-airflow-providers-common-io==1.6.0",
    "alembic==1.16.2",
    "boto3==1.38.41",
    "botocore==1.38.41",
    "email-validator==2.2.0",
    "fastapi==0.115.13",
    "flask==3.1.1",
    "fsspec==2025.5.1",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.73.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "openai==1.90.0",
    "opentelemetry-api==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-exporter-otlp==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "pendulum==3.1.0",
    "protobuf==5.29.5",
    "pydantic==2.11.7",
    "python-daemon==3.1.2",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "requests==2.32.4",
    "sqlalchemy==1.4.54",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "typer==0.16.0",
    "uvicorn==0.34.3",
    "uvloop==0.21.0",
    "websockets==15.0.1",
    "mlflow>=3.1.1",
    "pandas>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "types-requests>=2.32.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
