[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydub>=0.25.1",
    "websockets>=12.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pydub-stubs>=0.25.1.6",
]
