[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydub>=0.25.1",
    "websockets>=12.0",
    "boto3>=1.35.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.50",
    "aiohttp>=3.9.0",
    "email-validator>=2.2.0",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
    "jinja2>=3.1.6",
    "mlflow>=3.1.0",
    "sqlalchemy>=2.0.41",
    "requests>=2.32.4",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
    "protobuf>=6.31.1",
    "pyarrow>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "pydub-stubs>=0.25.1.6",
    "matplotlib>=3.10.3",
    "black", 
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.38.41",
    "pydub-stubs>=0.25.1.6",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning:pydub.utils",
]
