[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydub>=0.25.1",
    "websockets>=12.0",
    "boto3>=1.35.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.50",
    "aiohttp>=3.9.0",
    "mlflow>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.38.41",
    "pydub-stubs>=0.25.1.6",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning:pydub.utils",
]
